# shipsafe-shared

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cli_core/: deploy.ts  health.ts  index.ts  package-lock.json  package.json  prompts.ts  secrets.ts
cli_core/__tests__/: deploy.test.ts  health.test.ts  prompts.test.ts  secrets.test.ts
design/: package-lock.json  package.json  tailwind.preset.cjs  tokens.test.ts  tokens.ts
docs/: ARCHITECTURE.md  DESIGN-SYSTEM.md  GETTING-STARTED.md  PARTNER-INTEGRATION.md  PHASES.md  SUBMISSION-README-TEMPLATE.md  TDD-STRATEGY.md  UNIVERSAL-CLI.md  VIDEO_SCRIPT_PROMPT_TEMPLATE.md
docs/video_scripts/: 00_README.md  AGENTOPS_VIDEO_SCRIPT.md  CARGODB_VIDEO_SCRIPT.md  NAVIGUARD_SCRIPT_SCENES.md  NAVIGUARD_VIDEO_SCRIPT.md  ROUTEFORGE_VIDEO_SCRIPT.md  TIDESYNC_VIDEO_SCRIPT.md  VOYAGEBLACK_VIDEO_SCRIPT.md
scripts/: smoke_test_instrumentation.py
shipsafe_shared/demo_data/: __init__.py  hormuz_crisis.py  ports.json  vessels.json
shipsafe_shared/instrumentation/: __init__.py  telemetry.py
tests/demo_data/: test_fixtures.py
tests/instrumentation/: test_telemetry.py
