[project]
name = "shipsafe-shared"
version = "0.1.0a1"
description = "Shared instrumentation, demo data, design tokens, and CLI scaffolding for the ShipSafe AI reliability platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Prateek Srivastava", email = "prateek.srivastava2311@gmail.com" }
]
keywords = [
    "ai-agents",
    "observability",
    "opentelemetry",
    "google-adk",
    "gemini",
    "reliability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # Google ADK — the agent framework (all six submissions)
    "google-adk>=1.0.0",

    # OpenInference instrumentation for ADK — emits OTel spans to Phoenix
    "openinference-instrumentation-google-adk>=0.1.0",

    # Phoenix OTel registration — fan-out to Phoenix Cloud
    "arize-phoenix-otel>=0.6.1",

    # OTLP HTTP exporter — fan-out to Dynatrace
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",

    # OTel SDK (brought in transitively, pinned for stability)
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",

    # Pydantic for structured outputs and config
    "pydantic>=2.0",

    # HTTP client for webhook handlers and health checks
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",

    # Linting and formatting
    "ruff>=0.4.0",

    # Type checking
    "mypy>=1.10",

    # Type stubs
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/shipsafe-ai/shipsafe-shared"
Repository = "https://github.com/shipsafe-ai/shipsafe-shared"
Issues = "https://github.com/shipsafe-ai/shipsafe-shared/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only include the Python package, not docs, cli_core, or design
packages = ["shipsafe_shared"]

# ─────────────────────────────────────────────────────────────────
# pytest configuration
# ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=shipsafe_shared --cov-report=term-missing --cov-fail-under=80"

# ─────────────────────────────────────────────────────────────────
# ruff configuration
# ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["shipsafe_shared"]

# ─────────────────────────────────────────────────────────────────
# mypy configuration
# ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
